Design improvements